# livraria-Marco-Andre

./: .gitignore  db.sqlite3  livraria_bkp.json  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_livro_capa.py  0003_autor_livro.py  0004_livro_autores.py
livraria/models/: livro.py  usuario.py
livraria/serializers/: __init__.py  livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
models/: autor.py  categoria.py  editora.py
serializers/: autor.py  categoria.py  editora.py  livro.py
views/: autor.py  livro.py
