[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Davi Gabriel Tomaz", email = "davigabtomaz@gmail.com"},
]
dependencies = [
    "django>=4.1.7",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=67.6.0",
]
requires-python = ">=3.10"
license = {text = ""}
